syntax = "proto3";

package logic;

option go_package = "github.com/php403/im/api/logic";

import "protocol.proto";

message PushMsg {
    enum Type {
        PUSH = 0;
        ROOM = 1;
        BROADCAST = 2;
    }
    Type type = 1;
    uint32 operation = 2;
    string server = 4;
    string roomId = 5;
    string appId = 6;
    int64 userId = 7;
    bytes msg = 8;
}


//todo 后续登录改prc验证
message ConnectReq {
    string server = 1;
    string cookie = 2;
    bytes token = 3;
}

message ConnectReply {
    repeated int32 accepts = 1;
}
message ReceiveRequest{
    string server = 1;
    protocol.Proto proto = 2;
}

message ReceiveReply {

}



service Logic {
    rpc Receive(ReceiveRequest) returns (ReceiveReply);
}



